--- a/resume.tex
+++ b/resume.tex
@@ -14,16 +14,16 @@
 
 \begin{rSection}{Experience}
 
-\begin{rSubsection}{\href{https://alloyenterprises.co}{Alloy Enterprises}}{June 2022 - November 2024}{Software Engineer, Architect}{Burlington, MA}
+\begin{rSubsection}{Software Engineer, Architect}{June 2022 - November 2024}{\href{https://alloyenterprises.co}{Alloy Enterprises}}{Burlington, MA}
 \item Planned, built, and maintained proprietary CAD/CAM software to support Alloy's novel manufacturing process. Collaborated across disciplines to unlock aluminum components at scale.
 \item Software Engineering, Computational Geometry, Manufacturing, Python, C++
 \end{rSubsection}
 
-\begin{rSubsection}{Self-employed}{December 2018 - June 2022}{}{Swampscott, MA}
+\begin{rSubsection}{Consultant}{December 2018 - June 2022}{\href{https://metatooth.com/services}{Self-employed}}{Swampscott, MA}
 \item Consulting services in advanced manufacturing, technology integration, and product development.
 \end{rSubsection}
 
-\begin{rSubsection}{\href{https://lightforceortho.com}{LightForce Orthodontics}}{August 2017 - December 2018}{VP of Software}{Cambridge, MA}
+\begin{rSubsection}{VP of Software}{August 2017 - December 2018}{\href{https://lightforceortho.com}{LightForce Orthodontics}}{Cambridge, MA}
 \item Joined this pre-seed round dental startup as first software hire. Responsible for medical device and workflow software in support of company's first sale. Deployed cloud-native software stack for LightForce's first 510(K). Contributed system architecture, implementation, regulatory documentation, project management, and product management.
 \item Medical Devices, FDA, JavaScript, C++, Computational Geometry
 \item \textbf{510(K) No. K183542} Signature Orthodontics System, 2019-01-02
@@ -31,24 +31,24 @@
 \end{rSubsection}
 
 
-\begin{rSubsection}{\href{https://dentsplysirona.com}{Atlantis - Dentsply Sirona}}{August 2010 - August 2017}{Director, Global Digital Product Development}{Waltham, MA}
+\begin{rSubsection}{Director, Global Digital Product Development}{August 2010 - August 2017}{\href{https://dentsplysirona.com}{Atlantis - Dentsply Sirona}}{Waltham, MA}
 \item Responsible for digital dentistry strategy and project planning for global business. Leader of cross-functional product development team that launched Atlantis' first digital product. Collaborated with business partners to deliver integrated digital workflows.
 \item Product Development, Cross-functional Team Leadership, Medical Devices, Manufacturing, Business Development
 \item \textbf{US Patent No. 10,390,910 B2} INTEGRATED DENTAL IMPLANT COMPONENT AND TOOL FOR PLACEMENT OF A DENTAL IMPLANT COMPONENT
 \item \textbf{US Patent No. D787,061S} SCAN BODY FOR DENTAL IMPLANT PROCEDURES
 \end{rSubsection}
 
-\begin{rSubsection}{\href{https://dentsplysirona.com}{Atlantis - Astra Tech}}{January 2007 - July 2010}{Consulting Software Engineer}{Waltham, MA}
+\begin{rSubsection}{Consulting Software Engineer}{January 2007 - July 2010}{\href{https://dentsplysirona.com}{Atlantis - Astra Tech}}{Waltham, MA}
 \item Technical owner of industry leading B2B platform. Full stack development using JavaScript, Ruby on Rails, PostgreSQL, and C++. Collaborated with business partners to deliver integrated digital dentistry workflows.
 \item Software Engineering, Medical Devices, Manufacturing, Ruby on Rails, C++, Computational Geometry
 \end{rSubsection}
 
-\begin{rSubsection}{\href{https://dentsplysirona.com}{Atlantis Components}}{August 2000 - January 2007}{Senior Software Engineer}{Cambridge, MA}
+\begin{rSubsection}{Senior Software Engineer}{August 2000 - January 2007}{\href{https://dentsplysirona.com}{Atlantis Components}}{Cambridge, MA}
 \item First software hire for this dental startup. Supported sales \& manufacture of industry's first CAD/CAM dental implant abutment. Automation of data acquisition, product design, and manufacturing workflows
 \item Software Engineering, Medical Devices, Manufacturing, C++, Ruby on Rails
 \end{rSubsection}
 
-\begin{rSubsection}{\href{https://fst.com}{Freudenberg Sealing Technologies}}{June 1996 - September 1999}{Product Engineer}{Bristol, NH}
+\begin{rSubsection}{Product Engineer}{June 1996 - September 1999}{\href{https://fst.com}{Freudenberg Sealing Technologies}}{Bristol, NH}
 \item Product design, prototyping, and testing in support of sales and manufacturing. My first experience with Kaizen and continuous improvement culture.
 \item C, Siemens NX, Computer-Aided Design (CAD), Manufacturing
 \end{rSubsection}
