location, action words

--- a/resume.tex
+++ b/resume.tex
@@ -4,7 +4,7 @@
 \usepackage{hyperref}
 
 \name{Terry G Lorber}
-\address{\href{https://www.rideside.net/~tgl}{www.rideside.net/\texttildelow tgl} \\ \href{mailto:tgl@rideside.net}{tgl@rideside.net} \\ +1--781--632--0733}
+\address{Swampscott, MA \\ \href{mailto:tgl@rideside.net}{tgl@rideside.net} \\ +1--781--632--0733}
                                         
 \begin{document}
   
@@ -20,7 +20,7 @@
 \end{rSubsection}
 
 \begin{rSubsection}{Consultant}{December 2018 - June 2022}{\href{https://metatooth.com/services}{Self-employed}}{Swampscott, MA}
-\item Consulting services in advanced manufacturing, technology integration, and product development.
+\item Advised technology companies on advanced manufacturing, technology integration, and product development.
 \end{rSubsection}
 
 \begin{rSubsection}{VP of Software}{August 2017 - December 2018}{\href{https://lightforceortho.com}{LightForce Orthodontics}}{Cambridge, MA}
@@ -32,7 +32,7 @@
 
 
 \begin{rSubsection}{Director, Global Digital Product Development}{August 2010 - August 2017}{\href{https://dentsplysirona.com}{Atlantis - Dentsply Sirona}}{Waltham, MA}
-\item Responsible for digital dentistry strategy and project planning for global business. Leader of cross-functional product development team that launched Atlantis' first digital product. Collaborated with business partners to deliver integrated digital workflows.
+\item Contributed strategy and project planning for global digital business. Leader of cross-functional product development team that launched Atlantis' first digital product. Collaborated with business partners to deliver integrated digital workflows.
 \item Product Development, Cross-functional Team Leadership, Medical Devices, Manufacturing, Business Development
 \item \textbf{US Patent No. 10,390,910 B2} INTEGRATED DENTAL IMPLANT COMPONENT AND TOOL FOR PLACEMENT OF A DENTAL IMPLANT COMPONENT
 \item \textbf{US Patent No. D787,061S} SCAN BODY FOR DENTAL IMPLANT PROCEDURES
