just a little shorter

--- a/resume.tex
+++ b/resume.tex
@@ -32,8 +32,8 @@
 
 
 \begin{rSubsection}{Director, Global Digital Product Development}{August 2010 - August 2017}{\href{https://dentsplysirona.com}{Atlantis - Dentsply Sirona}}{Waltham, MA}
-\item Contributed strategy and project planning for global digital business. Leader of cross-functional product development team that launched Atlantis' first digital product. Collaborated with business partners to deliver integrated digital workflows.
-\item Product Development, Cross-functional Team Leadership, Medical Devices, Manufacturing, Business Development
+\item Contributed strategy and project planning for global digital business. Leader of cross-functional product development team that launched Atlantis' first digital product. Delivered integrated digital workflows with business partners.
+\item Product Development, Cross-functional Team Leadership, Medical Devices, Manufacturing
 \item \textbf{US Patent No. 10,390,910 B2} INTEGRATED DENTAL IMPLANT COMPONENT AND TOOL FOR PLACEMENT OF A DENTAL IMPLANT COMPONENT
 \item \textbf{US Patent No. D787,061S} SCAN BODY FOR DENTAL IMPLANT PROCEDURES
 \end{rSubsection}
