format education, another year of town meeting

--- a/resume.tex
+++ b/resume.tex
@@ -57,11 +57,13 @@
 
 \begin{rSection}{Education}
 
-\item {\bf Boston University, Boston, MA} \hfill {\em September 2013} \\
-M.S. in Computer Science
+  \begin{rSubsection}{M.S. in Computer Science}{June 2010 - September 2013}{\href{https://www.bu.edu/}{Boston University}}{Boston, MA}
+  \item[]
+  \end{rSubsection}
 
-\item {\bf University of Michigan, Ann Arbor, MI} \hfill {\em May 1996} \\
-B.S. in Engineering (Mechanical Engineering)
+  \begin{rSubsection}{B.S. in Engineering (Mechanical Engineering)}{September 1992 - May 1996}{\href{https://www.umich.edu/}{University of Michigan}}{Ann Arbor, MI}
+  \item[]
+  \end{rSubsection}
 
 \end{rSection}
 
@@ -87,7 +89,7 @@ Infleuncers & Atwood's Coding Horror, Beck's XP, Booch's UML, \\
 
 \begin{rSection}{Extra}
 \item Programmer, Gardener, Brewer, Hiker, Surfer, Telemark skier
-\item Town Meeting Member | Swampscott, MA | 2018-2024
+\item Town Meeting Member | Swampscott, MA | 2018-2025
 \item Cubmaster Pack 55 | Swampscott, MA | 2018-2021
 \item UM College of Engineering Leadership Honor Society | Ann Arbor, MI | 1995-1996
 \item Eagle Scout Troop 295 | Concord, NH | 1991
