--- a/resume.tex
+++ b/resume.tex
@@ -7,7 +7,7 @@
 \address{Swampscott, MA \\ \href{mailto:tgl@rideside.net}{tgl@rideside.net} \\ +1--781--632--0733}
                                         
 \begin{document}
-  
+
 \begin{rSection}{Profile}
 \item Consensus-building leader of cross-functional product development teams. I've developed strategy and implemented product roadmaps for startups to global businesses. Pro-active project manager experienced with quality systems for medical devices.
 \end{rSection}
@@ -20,7 +20,7 @@
 \end{rSubsection}
 
 \begin{rSubsection}{Consultant}{December 2018 - June 2022}{\href{https://metatooth.com/services}{Self-employed}}{Swampscott, MA}
-\item Advised technology companies on advanced manufacturing, technology integration, and product development.
+\item Advised businesses on advanced manufacturing, technology integration, and product development.
 \end{rSubsection}
 
 \begin{rSubsection}{VP of Software}{August 2017 - December 2018}{\href{https://lightforceortho.com}{LightForce Orthodontics}}{Cambridge, MA}
@@ -29,7 +29,6 @@
 \item \textbf{510(K) No. K183542} Signature Orthodontics System, 2019-01-02
 \item \textbf{510(K) No. K181271} Signature Orthodontics System, 2018-06-13
 \end{rSubsection}
-
 
 \begin{rSubsection}{Director, Global Digital Product Development}{August 2010 - August 2017}{\href{https://dentsplysirona.com}{Atlantis - Dentsply Sirona}}{Waltham, MA}
 \item Contributed strategy and project planning for global digital business. Leader of cross-functional product development team that launched Atlantis' first digital product. Delivered integrated digital workflows with business partners.
@@ -88,10 +87,10 @@ Infleuncers & Atwood's Coding Horror, Beck's XP, Booch's UML, \\
 \end{rSection}
 
 \begin{rSection}{Extra}
-\item Programmer, Gardener, Brewer, Hiker, Surfer, Telemark skier
+\item \href{https://github.com/terryg}{Programmer}, \href{https://www.tiktok.com/@growherbert}{Gardener}, Brewer, Hiker, Surfer, Telemark skier
 \item Town Meeting Member | Swampscott, MA | 2018-2025
 \item Cubmaster Pack 55 | Swampscott, MA | 2018-2021
-\item UM College of Engineering Leadership Honor Society | Ann Arbor, MI | 1995-1996
+\item UM College of Engineering Leadership Honor Society | Ann Arbor, MI | 1995
 \item Eagle Scout Troop 295 | Concord, NH | 1991
 \end{rSection}
 
