rename, add tooling, add React

--- a/TerryLorber-CV.tex
+++ b/TerryLorber-CV.tex
@@ -75,7 +75,7 @@ Protocols \& APIs & HTTPS, JSON, REST, RPC, WSS, XML, YAML \\
 Databases & MS SQL Server, PostgreSQL, Redis, Sqlite3 \\
 Web \& App servers & flask, NGINX, node.js, puma \\
 Tools & AWS, Azure, CMake, Docker, Emacs, GitHub, Jira, WordPress \\
-Frameworks & CGAL, FLTK, Node.js, OpenGL, OpenMesh, Ruby on Rails, \\
+Frameworks & CGAL, FLTK, Node.js, OpenGL, OpenMesh, React, Ruby on Rails, \\
  & Sinatra.rb, three.js, Unidraw, VTK, Vue.js \\
 Methodologies & Agile, Continuous Improvement, Kaizen, KanBan \\
 Infleuncers & Atwood's Coding Horror, Beck's XP, Booch's UML, \\
