--- a/TerryLorber-CV.tex
+++ b/TerryLorber-CV.tex
@@ -14,6 +14,11 @@
 
 \begin{rSection}{Experience}
 
+\begin{rSubsection}{Founding Software Engineer}{March 2025 - present}{\href{https://fabublox.com}{FabuBlox}}{Boston, MA}
+\item Software for design, simulation, and visualization. In support of a semiconductor process design community.
+\item Software Engineering, Computational Geometry, C++    
+\ned{rSubSection}    
+    
 \begin{rSubsection}{Software Engineer, Architect}{June 2022 - November 2024}{\href{https://alloyenterprises.co}{Alloy Enterprises}}{Burlington, MA}
 \item Planned, built, and maintained proprietary CAD/CAM software to support Alloy's novel manufacturing process. Collaborated across disciplines to unlock aluminum components at scale.
 \item Software Engineering, Computational Geometry, Manufacturing, Python, C++
