--- a/TerryLorber-CV.tex
+++ b/TerryLorber-CV.tex
@@ -17,7 +17,7 @@
 \begin{rSubsection}{Founding Software Engineer}{March 2025 - present}{\href{https://fabublox.com}{FabuBlox}}{Boston, MA}
 \item Software for design, simulation, and visualization. In support of a semiconductor process design community.
 \item Software Engineering, Computational Geometry, C++    
-\ned{rSubSection}    
+\end{rSubsection}
     
 \begin{rSubsection}{Software Engineer, Architect}{June 2022 - November 2024}{\href{https://alloyenterprises.co}{Alloy Enterprises}}{Burlington, MA}
 \item Planned, built, and maintained proprietary CAD/CAM software to support Alloy's novel manufacturing process. Collaborated across disciplines to unlock aluminum components at scale.
