--- a/TerryLorber-CV.tex
+++ b/TerryLorber-CV.tex
@@ -15,7 +15,7 @@
 \begin{rSection}{Experience}
 
 \begin{rSubsection}{Founding Software Engineer}{March 2025 - present}{\href{https://fabublox.com}{FabuBlox}}{Boston, MA}
-\item Software for design, simulation, and visualization. In support of a semiconductor process design community.
+\item Software for semiconductor process design, device simulation, and visualization.
 \item Software Engineering, Computational Geometry, C++    
 \end{rSubsection}
     
@@ -29,26 +29,26 @@
 \end{rSubsection}
 
 \begin{rSubsection}{VP of Software}{August 2017 - December 2018}{\href{https://lightforceortho.com}{LightForce Orthodontics}}{Cambridge, MA}
-\item Joined this pre-seed round dental startup as first software hire. Responsible for medical device and workflow software in support of company's first sale. Deployed cloud-native software stack for LightForce's first 510(K). Contributed system architecture, implementation, regulatory documentation, project management, and product management.
+\item Joined this pre-seed round dental startup as first software hire. Responsible for medical device and workflow software in support of company's first sale. Contributed system architecture, implementation, regulatory documentation, project management, and product management.
 \item Medical Devices, FDA, JavaScript, C++, Computational Geometry
 \item \textbf{510(K) No. K183542} Signature Orthodontics System, 2019-01-02
 \item \textbf{510(K) No. K181271} Signature Orthodontics System, 2018-06-13
 \end{rSubsection}
 
 \begin{rSubsection}{Director, Global Digital Product Development}{August 2010 - August 2017}{\href{https://dentsplysirona.com}{Atlantis - Dentsply Sirona}}{Waltham, MA}
-\item Contributed strategy and project planning for global digital business. Leader of cross-functional product development team that launched Atlantis' first digital product. Delivered integrated digital workflows with business partners.
+\item Strategy and project planning for global digital business.
 \item Product Development, Cross-functional Team Leadership, Medical Devices, Manufacturing
 \item \textbf{US Patent No. 10,390,910 B2} INTEGRATED DENTAL IMPLANT COMPONENT AND TOOL FOR PLACEMENT OF A DENTAL IMPLANT COMPONENT
 \item \textbf{US Patent No. D787,061S} SCAN BODY FOR DENTAL IMPLANT PROCEDURES
 \end{rSubsection}
 
 \begin{rSubsection}{Consulting Software Engineer}{January 2007 - July 2010}{\href{https://dentsplysirona.com}{Atlantis - Astra Tech}}{Waltham, MA}
-\item Technical owner of industry leading B2B platform. Full stack development using JavaScript, Ruby on Rails, PostgreSQL, and C++. Collaborated with business partners to deliver integrated digital dentistry workflows.
+\item Technical owner of industry leading B2B platform.
 \item Software Engineering, Medical Devices, Manufacturing, Ruby on Rails, C++, Computational Geometry
 \end{rSubsection}
 
 \begin{rSubsection}{Senior Software Engineer}{August 2000 - January 2007}{\href{https://dentsplysirona.com}{Atlantis Components}}{Cambridge, MA}
-\item First software hire for this dental startup. Supported sales \& manufacture of industry's first CAD/CAM dental implant abutment. Automation of data acquisition, product design, and manufacturing workflows
+\item First software hire for this dental startup. Automation of data acquisition, product design, and manufacturing workflows.
 \item Software Engineering, Medical Devices, Manufacturing, C++, Ruby on Rails
 \end{rSubsection}
 
@@ -92,7 +92,7 @@ Infleuncers & Atwood's Coding Horror, Beck's XP, Booch's UML, \\
 \end{rSection}
 
 \begin{rSection}{Extra}
-\item \href{https://github.com/terryg}{Programmer}, \href{https://www.tiktok.com/@growherbert}{Gardener}, Brewer, Hiker, Surfer, Telemark skier
+\item \href{https://github.com/terryg}{Programmer}, \href{https://www.tiktok.com/@growherbert}{Gardener}, \href{https://48bottles.tumblr.com}{Brewer}, Hiker, Surfer, Telemark skier
 \item Town Meeting Member | Swampscott, MA | 2018-2025
 \item Cubmaster Pack 55 | Swampscott, MA | 2018-2021
 \item UM College of Engineering Leadership Honor Society | Ann Arbor, MI | 1995
