--- a/TerryLorber-CV.tex
+++ b/TerryLorber-CV.tex
@@ -79,7 +79,7 @@ Operating Systems & Browsers (Chrome, Firefox), Linux (Ubuntu), macOS, Windows \
 Protocols \& APIs & HTTPS, JSON, REST, RPC, WSS, XML, YAML \\
 Databases & MS SQL Server, PostgreSQL, Redis, Sqlite3 \\
 Web \& App servers & flask, NGINX, node.js, puma \\
-Tools & AWS, Azure, CMake, Docker, Emacs, GitHub, Jira, WordPress \\
+Tools & CMake, Conan, Docker, Emacs, GitHub, Google Cloud, Jira, Linear.app, WordPress \\
 Frameworks & CGAL, FLTK, Node.js, OpenGL, OpenMesh, React, Ruby on Rails, \\
  & Sinatra.rb, three.js, Unidraw, VTK, Vue.js \\
 Methodologies & Agile, Continuous Improvement, Kaizen, KanBan \\
@@ -92,7 +92,7 @@ Infleuncers & Atwood's Coding Horror, Beck's XP, Booch's UML, \\
 \end{rSection}
 
 \begin{rSection}{Extra}
-\item \href{https://github.com/terryg}{Programmer}, \href{https://www.tiktok.com/@growherbert}{Gardener}, \href{https://48bottles.tumblr.com}{Brewer}, Hiker, Surfer, Telemark skier
+\item \href{https://48bottles.com}{Brewer}, \href{https://www.tiktok.com/@growherbert}{Gardener}, Hiker, \href{https://github.com/terryg}{Programmer}, Telemark skier
 \item Town Meeting Member | Swampscott, MA | 2018-2025
 \item Cubmaster Pack 55 | Swampscott, MA | 2018-2021
 \item UM College of Engineering Leadership Honor Society | Ann Arbor, MI | 1995
