--- a/TerryLorber-CV.tex
+++ b/TerryLorber-CV.tex
@@ -15,8 +15,8 @@
 \begin{rSection}{Experience}
 
 \begin{rSubsection}{Founding Software Engineer}{March 2025 - present}{\href{https://fabublox.com}{FabuBlox}}{Boston, MA}
-\item Software for semiconductor process design, device simulation, and visualization.
-\item Software Engineering, Computational Geometry, C++    
+\item Software for semiconductor process design, simulation, and visualization.
+\item Software Engineering, Computational Geometry, C++, TypeScript    
 \end{rSubsection}
     
 \begin{rSubsection}{Software Engineer, Architect}{June 2022 - November 2024}{\href{https://alloyenterprises.co}{Alloy Enterprises}}{Burlington, MA}
